--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "dependencies": {
         "@apollo/client": "^3.5.8",
+        "@faker-js/faker": "^6.0.0-alpha.7",
         "concurrently": "^7.0.0",
         "framer-motion": "^6.2.8",
+        "install": "^0.13.0",
         "jwt-decode": "^3.1.2",
         "react-router-dom": "^5.3.0"
     },
