--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
-        "build": "cd client && npm run build"
+        "build": "cd client && npm run build",
+        "deploy": "gh-pages -d build"
     },
     "repository": {
         "type": "git",
@@ -29,5 +30,5 @@
     "bugs": {
         "url": "https://github.com/candre02/Program-Her/issues"
     },
-    "homepage": "https://github.com/candre02/Program-Her#readme"
+    "homepage": "https://candre02.github.io/Program-Her/"
 }
