--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build",
+        "predeploy": "npm run build"
     },
     "repository": {
         "type": "git",
