--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build",
         "deploy": "gh-pages -d build",
-        "predeploy": "npm run build"
+        
     },
     "repository": {
         "type": "git",
@@ -31,5 +31,5 @@
     "bugs": {
         "url": "https://github.com/candre02/Program-Her/issues"
     },
-    "homepage": "https://candre02.github.io/Program-Her/"
+    "homepage": "https://candre02.github.io/Program-Her"
 }
