--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "bugs": {
         "url": "https://github.com/candre02/Program-Her/issues"
     },
-    "homepage": "https://candre02.github.io/Program-Her"
+    "homepage": "https://candre02.github.io/Program-Her/"
 }
